<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context="com.vplay.MainActivity" >

    <Button
        android:id="@+id/treasure_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wordmaker_game_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/button_green"
        android:drawableLeft="@drawable/treasure"
        android:gravity="center"
        android:onClick="on_click_treasure_game_button"
        android:text="@string/treasure_game"
        android:textColor="@android:color/white"
        android:textSize="40sp" />
   
    <Button
        android:id="@+id/wordmaker_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/treasure_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_yellow"
        android:drawableLeft="@drawable/wordmaker"
        android:gravity="center"
        android:onClick="on_click_wordmaker_game_button"
        android:text="@string/wordmaker"
        android:textColor="@android:color/white"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/feedme_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordmaker_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_green"
        android:drawableLeft="@drawable/penguin"
        android:onClick="on_click_feedme_game_button"
        android:text="@string/feedme"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/wordgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedme_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_blue"
        android:onClick="on_click_wordgame_button"
        android:text="@string/word_game"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordgame_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_yellow"
        android:onClick="on_click_setting_button"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="40sp" />
	
</RelativeLayout>
</ScrollView>